After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 729117 - rtpbuffer: fix memory leak when gst_rtp_buffer_map fails
rtpbuffer: fix memory leak when gst_rtp_buffer_map fails
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other All
: Normal normal
: 1.3.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-04-28 15:16 UTC by Haakon Sporsheim (ieei)
Modified: 2014-04-29 06:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Makes sure map[3] is unmapped. (872 bytes, patch)
2014-04-28 15:16 UTC, Haakon Sporsheim (ieei)
committed Details | Review

Description Haakon Sporsheim (ieei) 2014-04-28 15:16:55 UTC
Created attachment 275356 [details] [review]
Makes sure map[3] is unmapped.

See attached patch.

Credits to Stian Selnes at PexipInc
Comment 1 Sebastian Dröge (slomo) 2014-04-29 06:47:00 UTC
Please attach patches in "git format-patch" style in the future, that makes them easier to apply with just "git am" :)

commit 0011d8cbb50ad3f4db89ce0f7dc4172e55f34c55
Author: Stian Selnes <stian@pexip.com>
Date:   Tue Apr 29 08:46:02 2014 +0200

    rtpbuffer: fix memory leak when gst_rtp_buffer_map fails
    
    Make sure rtp->data[3] is set before jumping to error path.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=729117