rtpbuffer: fix memory leak when gst_rtp_buffer_map fails

Make sure rtp->data[3] is set before jumping to error path.

https://bugzilla.gnome.org/show_bug.cgi?id=729117